    objects from their input.  (Rob Turner via cutting)

    AVRO-1396. Java: Enable tojson command-line tool to pretty print output.
    (Rob Turner via cutting)

    AVRO-1409. Java: Add an API for testing schema compatibility.
    (Christophe Taton via cutting)

    AVRO-1379. C: avro_file_writer_append_encoded() function.
    (Mark Teodoro via dcreager)

  OPTIMIZATIONS

    AVRO-1348. Java: Improve UTF-8 to String conversion performance in
    Java 6. (cutting)

  IMPROVEMENTS

    AVRO-1355. Java: Reject schemas with duplicate field
    names. (Christophe Taton via cutting)

    AVRO-1332. C#: Improve DatumReader performance.
    (David McIntosh via cutting)

    AVRO-1387. Java: Add DataFileWriter option to inhibit flush per block.
    (Hari Shreedharan via cutting)

    AVRO-1384. Java: Permit Maven to find imports within project.
    (Alexandre Normand via cutting)

    AVRO-1397. Java: Improve error message when missing field has no default.
    (David Carr via cutting)

    AVRO-1398. Increase default sync interval from 16k to 64k.
    (Rob Turner via cutting)

    AVRO-1234. Java: Permit AvroInputFormat to process files whose
    names don't end in .avro.  (Dave Beech & Sandy Ryza via cutting)

    AVRO-1344. Java: Expose sync interval configuration in mapreduce API.
    (Rob Turner via cutting)

    AVRO-1406. C++. GenericRecord (GenericDatum, etc.) doesn't support
    getters and setters with field name argument.
    (Iaroslav Zeigerman via thiru)

    AVRO-1063. Ruby: Use multi_json instead of requiring yajl.
    (Duke via cutting)

    AVRO-1225. Java: Add guide for MapReduce API. (Brock Noland via cutting)

    AVRO-1426. Java: Add mapreduce word count example.
    (Jesse Anderson via cutting)

  BUG FIXES

    AVRO-1368. Fix SpecificDatumWriter to, when writing a string
    schema, not silently convert any object to a string.
    (Christophe Taton via cutting)

    AVRO-1374. Java: Fix compilation against Hadoop 2.1.
    (Julian Zhou via cutting)
